--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
 
   <title>Resume</title>
 
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <link href="css/style.css" rel="stylesheet" type="text/css">
-  <!--<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">//-->
 
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
+  <script src="http://d3js.org/d3.v3.js"></script>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <!--<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>//-->
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  <!--<script>$(function()
+    {$("#graph").load("https://gist.githubusercontent.com/erinlehmkuhl/d45cff0bd58afaa1dd4b/raw/bdccd58f236ff3ced60a786a1f814ea5d51149b1/gra"); 
+  });
+  </script>//-->
+
+
+
 
   <meta name="viewport" content="width=device-width">
 </head>
@@ -26,6 +34,12 @@
     <div id="workExperience" class='gray'>
       <h2>Work Experience</h2>
     </div>
+        <h3 id="why" data-toggle="collapse" data-target="#graph">CLICK TO CLOSE CHART: </h3>
+        <p id="ability"> Can you make it in the film industry or is it time to learn a new trade? 
+          <button id="tryIt" onclick="salaryGame()">Try it</button>
+        </p>
+      <div id="graph" class ="collapse in">
+      </div>
     <div id="projects">
       <h2>Projects</h2>
     </div>
@@ -37,13 +51,13 @@
     </div>
     <div id="letsConnect" class='dark-gray'>
       <h2 class='orange center-text'>Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-      </ul>
+      <ul id="footerContacts" class="flex-box"></ul>
     </div>
   </div>
 
 
   <script src="js/resumeBuilder.js"></script>
+  <script src="graph/graph.js"></script>
   <script type="text/javascript">
 
 
@@ -70,7 +84,5 @@
     }
   </script>
     
-  <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>//-->
-  <!--<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>//-->
 </body>
 </html>
