added links to email, github and twitter but changed twitter to IMDB

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>Work Experience</h2>
     </div>
     <h3 id="why" data-toggle="collapse" data-target="#graph">Silicon Valley Salary Game: </h3>
-    <div id="graph" class ="collapse in"></div>
+    <div id="graph"></div>
     <div id="projects">
       <h2>Projects</h2>
     </div>
